# MultiSheet_Spreadsheet

Networked_Spreadsheet/: README.md
Networked_Spreadsheet/AdminGUI/: AdminGUI.sln
Networked_Spreadsheet/AdminGUI/AdminController/: AdminController.cs  AdminController.csproj
Networked_Spreadsheet/AdminGUI/AdminUsersGUI/: AdminGUI.csproj  Administrative Client.Designer.cs  Administrative Client.cs
Networked_Spreadsheet/PS4/: PS4.sln
Networked_Spreadsheet/PS6/: PS6.sln  UpgradeLog.htm  UpgradeLog3.htm
Networked_Spreadsheet/Server/: CMakeLists.txt  Makefile  Makefile~  a.out  example_msgs.txt  main.cpp
Networked_Spreadsheet/Server/message_classes/: AdminEditOverviewMessage.cpp  AdminEditOverviewMessage.h  AdminListMessage.cpp  AdminListMessage.h  AdminUserListMessage.cpp  AdminUserListMessage.h  EditMessage.cpp  EditMessage.h  ErrorMessage.cpp  ErrorMessage.h  FullSendMessage.cpp  FullSendMessage.h  OpenMessage.cpp  OpenMessage.h  RevertMessage.cpp  RevertMessage.h  SpreadsheetListMessage.cpp  SpreadsheetListMessage.h  UndoMessage.cpp  UndoMessage.h
Networked_Spreadsheet/Server/network_controller/: Cell.cpp  Cell.h  CellChange.cpp  CellChange.h  Connection.cpp  Connection.h  ConnectionCollection.cpp  ConnectionCollection.h  DependencyGraph.cpp  DependencyGraph.h  Document.cpp  Document.h  DocumentCollection.cpp  DocumentCollection.h  Message.cpp  Message.h  NetworkController.cpp  NetworkController.h  Server.cpp  Server.h  UserAccountCollection.cpp  UserAccountCollection.h  buf_to_str.cpp  buf_to_str.h  save_document.h  save_server.cpp  save_server.h
(+57 files in other folders)
